--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
@@ -476,6 +476,15 @@ spec:
                             user:
                               type: string
                           type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
+                          type: object
                         windowsOptions:
                           properties:
                             gmsaCredentialSpec:
@@ -539,6 +548,10 @@ spec:
                       type: object
                   type: object
                 excludeIPRanges:
+                  type: string
+                excludeInboundPorts:
+                  type: string
+                excludeOutboundPorts:
                   type: string
                 galley:
                   properties:
@@ -948,6 +961,15 @@ spec:
                               type: string
                             user:
                               type: string
+                          type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
                           type: object
                         windowsOptions:
                           properties:
@@ -1446,6 +1468,15 @@ spec:
                                   type: string
                                 user:
                                   type: string
+                              type: object
+                            seccompProfile:
+                              properties:
+                                localhostProfile:
+                                  type: string
+                                type:
+                                  type: string
+                              required:
+                                - type
                               type: object
                             windowsOptions:
                               properties:
@@ -1963,6 +1994,15 @@ spec:
                                   type: string
                                 user:
                                   type: string
+                              type: object
+                            seccompProfile:
+                              properties:
+                                localhostProfile:
+                                  type: string
+                                type:
+                                  type: string
+                              required:
+                                - type
                               type: object
                             windowsOptions:
                               properties:
@@ -2486,6 +2526,15 @@ spec:
                                 user:
                                   type: string
                               type: object
+                            seccompProfile:
+                              properties:
+                                localhostProfile:
+                                  type: string
+                                type:
+                                  type: string
+                              required:
+                                - type
+                              type: object
                             windowsOptions:
                               properties:
                                 gmsaCredentialSpec:
@@ -2909,6 +2958,15 @@ spec:
                               type: string
                             user:
                               type: string
+                          type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
                           type: object
                         windowsOptions:
                           properties:
@@ -3447,6 +3505,15 @@ spec:
                             user:
                               type: string
                           type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
+                          type: object
                         windowsOptions:
                           properties:
                             gmsaCredentialSpec:
@@ -3837,6 +3904,15 @@ spec:
                               type: string
                             user:
                               type: string
+                          type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
                           type: object
                         windowsOptions:
                           properties:
@@ -4293,6 +4369,15 @@ spec:
                             user:
                               type: string
                           type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
+                          type: object
                         windowsOptions:
                           properties:
                             gmsaCredentialSpec:
@@ -4741,6 +4826,15 @@ spec:
                             user:
                               type: string
                           type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
+                          type: object
                         windowsOptions:
                           properties:
                             gmsaCredentialSpec:
@@ -5070,6 +5164,15 @@ spec:
                               type: string
                             user:
                               type: string
+                          type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
                           type: object
                         windowsOptions:
                           properties:
@@ -5963,6 +6066,15 @@ spec:
                             user:
                               type: string
                           type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
+                          type: object
                         windowsOptions:
                           properties:
                             gmsaCredentialSpec:
@@ -6401,6 +6513,15 @@ spec:
                               type: string
                             user:
                               type: string
+                          type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
                           type: object
                         windowsOptions:
                           properties:
