--- a/config/base/crds/istio.banzaicloud.io_meshgateways.yaml
+++ b/config/base/crds/istio.banzaicloud.io_meshgateways.yaml
@@ -528,6 +528,15 @@ spec:
                       user:
                         type: string
                     type: object
+                  seccompProfile:
+                    properties:
+                      localhostProfile:
+                        type: string
+                      type:
+                        type: string
+                    required:
+                    - type
+                    type: object
                   windowsOptions:
                     properties:
                       gmsaCredentialSpec:
