--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -461,6 +461,15 @@ spec:
                             user:
                               type: string
                           type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
+                          type: object
                         windowsOptions:
                           properties:
                             gmsaCredentialSpec:
@@ -865,6 +874,15 @@ spec:
                               type: string
                             user:
                               type: string
+                          type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
                           type: object
                         windowsOptions:
                           properties:
@@ -1741,6 +1759,15 @@ spec:
                               type: string
                             user:
                               type: string
+                          type: object
+                        seccompProfile:
+                          properties:
+                            localhostProfile:
+                              type: string
+                            type:
+                              type: string
+                          required:
+                            - type
                           type: object
                         windowsOptions:
                           properties:
